# particledynamics

./: CMakeLists.txt  README.md  server.cpp
include/: Electron.hpp  Force.hpp  Particle.hpp  Simulation.hpp  SimulationBase.hpp  Universe.hpp
src/: Electron.impl.hpp  Force.impl.hpp  Particle.impl.hpp  Simulation.impl.hpp  Universe.impl.hpp
tests/: Electron_test.cpp  Force_test.cpp  Particle_test.cpp  Simulation_test.cpp
